--- a/composer.json
+++ b/composer.json
@@ -72,5 +72,8 @@
     },
     "scripts": {
         "test": "./vendor/bin/phpunit"
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1"
     }
 }
