--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "damienharper/doctrine-audit-bundle": "^1.2",
+        "data-dog/audit-bundle": "^0.1.12",
         "friendsofsymfony/rest-bundle": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
         "jms/serializer-bundle": "^3.1",
         "nelmio/api-doc-bundle": "^3.3",
         "phpunit/phpunit": "^7.5",
         "sensio/framework-extra-bundle": "^5.2",
+        "simplethings/entity-audit-bundle": "^1.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -75,6 +77,7 @@
         "test": "./vendor/bin/phpunit"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.1"
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "hautelook/alice-bundle": "^2.3"
     }
 }
